// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`fixture output snapshots root.ts matches snapshot 1`] = `
"/**
 * AUTO-GENERATED by scripts/generate-sdk.ts
DO NOT EDIT — changes will be overwritten.

 */
import { type StitchToolClientSpec } from "../../src/spec/client.js";
import { StitchError } from "../../src/spec/errors.js";
import { GizmoInput, File, Component } from "./types.generated.js";
import {
  CreateGizmoResponse,
  ListGizmosResponse,
} from "./responses.generated.js";
import { Gizmo } from "./gizmo.js";

/** Fixture root entry point. */
export class Root {
  constructor(private client: StitchToolClientSpec) {}

  /**
   * Creates a gizmo.
   * Tool: create_gizmo
   */
  async createGizmo(
    titleOrOptions?:
      | string
      | { title?: string; labels?: Record<string, string> },
    labels?: Record<string, string>,
  ): Promise<Gizmo> {
    const options =
      typeof titleOrOptions === "object" &&
      titleOrOptions !== null &&
      !Array.isArray(titleOrOptions)
        ? titleOrOptions
        : { title: titleOrOptions, labels: labels };
    try {
      const raw = await this.client.callTool<CreateGizmoResponse>(
        "create_gizmo",
        { title: options?.title, labels: options?.labels },
      );
      return this.client.entities.resolve(Gizmo, ["gizmoId"], raw);
    } catch (error) {
      throw StitchError.fromUnknown(error);
    }
  }

  /**
   * Lists all gizmos.
   * Tool: list_gizmos
   */
  async gizmos(): Promise<Gizmo[]> {
    try {
      const raw = await this.client.callTool<ListGizmosResponse>(
        "list_gizmos",
        {},
      );
      return (raw?.gizmos || []).map((item) =>
        this.client.entities.resolve(Gizmo, ["gizmoId"], item),
      );
    } catch (error) {
      throw StitchError.fromUnknown(error);
    }
  }

  /** Create a Gizmo handle from an ID. */
  gizmo(id: string): Gizmo {
    return this.client.entities.resolve(Gizmo, ["gizmoId"], id);
  }
}
"
`;

exports[`fixture output snapshots gizmo.ts matches snapshot 1`] = `
"/**
 * AUTO-GENERATED by scripts/generate-sdk.ts
DO NOT EDIT — changes will be overwritten.

 */
import { type StitchToolClientSpec } from "../../src/spec/client.js";
import { StitchError } from "../../src/spec/errors.js";
import { GizmoInput, File, Component, GizmoData } from "./types.generated.js";
import {
  GetGizmoAssetResponse,
  SpawnWidgetsResponse,
} from "./responses.generated.js";
import { Widget } from "./widget.js";

/** A fixture gizmo. */
export class Gizmo {
  /** Stable identity-map key (minification-safe). */
  static readonly entityKey = "Gizmo";
  public readonly gizmoId!: string;
  public data?: GizmoData;

  /** Typed accessor for the entity's display title. */
  public get title(): string | undefined {
    return this.data?.title;
  }

  /** @deprecated Use factory methods (e.g. stitch.project(id), project.screen(id)), which return identity-mapped instances. */
  public constructor(
    private client: StitchToolClientSpec,
    data: any,
  ) {
    Object.defineProperty(this, "client", {
      value: client,
      enumerable: false,
      writable: true,
      configurable: true,
    });
    this.data = typeof data === "object" && data !== null ? data : undefined;
    const _rawName =
      typeof data === "string"
        ? data
        : typeof data?.name === "string"
          ? data.name
          : "";
    if (_rawName.includes("/")) {
      const _parts = _rawName.split("/");
      for (let _i = 0; _i < _parts.length - 1; _i += 2) {
        const _k =
          (_parts[_i].endsWith("s") ? _parts[_i].slice(0, -1) : _parts[_i]) +
          "Id";
        (this as any)[_k] = _parts[_i + 1];
      }
    }

    if (typeof data === "string") {
      if (!(this as any).gizmoId)
        (this as any).gizmoId = data.includes("/")
          ? data.split("/").pop()!
          : data;
    } else if (typeof data === "object" && data !== null) {
      if (data.gizmoId) (this as any).gizmoId = data.gizmoId;
      if (!(this as any).gizmoId && data.id) (this as any).gizmoId = data.id;
      if (!(this as any).gizmoId && typeof data.name === "string")
        (this as any).gizmoId = data.name.includes("/")
          ? data.name.split("/").pop()!
          : data.name;
    }
  }

  /** Convenience alias for gizmoId */
  get id(): string {
    return this.gizmoId;
  }

  /**
   * Gets a gizmo's asset URLs.
   * Tool: get_gizmo_asset
   */
  async getUrl(): Promise<string> {
    // Use cached download URL when present
    if ((this.data as any)?.htmlCode?.downloadUrl)
      return (this.data as any)?.htmlCode?.downloadUrl;

    try {
      const raw = await this.client.callTool<GetGizmoAssetResponse>(
        "get_gizmo_asset",
        { gizmoId: this.gizmoId, name: \`gizmos/\${this.gizmoId}\` },
      );
      const _value = raw?.htmlCode?.downloadUrl;
      if (_value == null || _value === "")
        throw new StitchError({
          code: "NOT_FOUND",
          message:
            "get_gizmo_asset response has no htmlCode.downloadUrl for this resource",
          recoverable: false,
        });
      return _value;
    } catch (error) {
      throw StitchError.fromUnknown(error);
    }
  }

  /**
   * Spawns widgets from a prompt.
   * Tool: spawn_widgets
   */
  async spawnFirst(
    prompt: string,
    modeOrOptions?: "FAST" | "SLOW" | { mode?: "FAST" | "SLOW" },
  ): Promise<Widget> {
    const options =
      typeof modeOrOptions === "object" &&
      modeOrOptions !== null &&
      !Array.isArray(modeOrOptions)
        ? modeOrOptions
        : { mode: modeOrOptions };
    try {
      const raw = await this.client.callTool<SpawnWidgetsResponse>(
        "spawn_widgets",
        { gizmoId: this.gizmoId, prompt, mode: options?.mode ?? "FAST" },
      );
      const _projected = (raw?.outputComponents ?? []).find(
        (c: any) => c?.design?.widgets != null,
      )?.design?.widgets?.[0];
      if (!_projected)
        throw new StitchError({
          code: "UNKNOWN_ERROR",
          message:
            "Incomplete API response from spawn_widgets: expected object at projection path",
          recoverable: false,
        });
      return this.client.entities.resolve(Widget, ["gizmoId", "widgetId"], {
        ..._projected,
        gizmoId: this.gizmoId,
      });
    } catch (error) {
      throw StitchError.fromUnknown(error);
    }
  }

  /** Create a Widget handle from an ID. */
  widget(id: string): Widget {
    return this.client.entities.resolve(Widget, ["gizmoId", "widgetId"], {
      widgetId: id,
      gizmoId: this.gizmoId,
    });
  }
}
"
`;

exports[`fixture output snapshots widget.ts matches snapshot 1`] = `
"/**
 * AUTO-GENERATED by scripts/generate-sdk.ts
DO NOT EDIT — changes will be overwritten.

 */
import { type StitchToolClientSpec } from "../../src/spec/client.js";
import { StitchError } from "../../src/spec/errors.js";
import { Generation } from "../../src/generation.js";
import { GizmoInput, File, Component, WidgetData } from "./types.generated.js";
import { SpawnWidgetsResponse } from "./responses.generated.js";
import { type WidgetExtras } from "../../src/spec/widget-extras.js";

/** A fixture widget belonging to a gizmo. */
export class Widget {
  /** Stable identity-map key (minification-safe). */
  static readonly entityKey = "Widget";
  public readonly gizmoId!: string;
  public readonly widgetId!: string;
  public data?: WidgetData;

  /** Typed accessor for the entity's display title. */
  public get title(): string | undefined {
    return this.data?.title;
  }

  /** @deprecated Use factory methods (e.g. stitch.project(id), project.screen(id)), which return identity-mapped instances. */
  public constructor(
    private client: StitchToolClientSpec,
    data: any,
  ) {
    Object.defineProperty(this, "client", {
      value: client,
      enumerable: false,
      writable: true,
      configurable: true,
    });
    this.data = typeof data === "object" && data !== null ? data : undefined;
    const _rawName =
      typeof data === "string"
        ? data
        : typeof data?.name === "string"
          ? data.name
          : "";
    if (_rawName.includes("/")) {
      const _parts = _rawName.split("/");
      for (let _i = 0; _i < _parts.length - 1; _i += 2) {
        const _k =
          (_parts[_i].endsWith("s") ? _parts[_i].slice(0, -1) : _parts[_i]) +
          "Id";
        (this as any)[_k] = _parts[_i + 1];
      }
    }

    if (typeof data === "string") {
      if (!(this as any).widgetId)
        (this as any).widgetId = data.includes("/")
          ? data.split("/").pop()!
          : data;
    } else if (typeof data === "object" && data !== null) {
      if (data.gizmoId) (this as any).gizmoId = data.gizmoId;
      if (data.widgetId) (this as any).widgetId = data.widgetId;
      if (!(this as any).widgetId && data.id) (this as any).widgetId = data.id;
      if (!(this as any).widgetId && typeof data.name === "string")
        (this as any).widgetId = data.name.includes("/")
          ? data.name.split("/").pop()!
          : data.name;
    }
  }

  /** Convenience alias for widgetId */
  get id(): string {
    return this.widgetId;
  }

  /**
   * Spawns widgets from a prompt.
   * Tool: spawn_widgets
   */
  async spawnAll(
    prompt: string,
    spawnModeOrOptions?: "FAST" | "SLOW" | { spawnMode?: "FAST" | "SLOW" },
  ): Promise<Generation<Widget, SpawnWidgetsResponse>> {
    const options =
      typeof spawnModeOrOptions === "object" &&
      spawnModeOrOptions !== null &&
      !Array.isArray(spawnModeOrOptions)
        ? spawnModeOrOptions
        : { spawnMode: spawnModeOrOptions };
    try {
      const raw = await this.client.callTool<SpawnWidgetsResponse>(
        "spawn_widgets",
        {
          gizmoId: this.gizmoId,
          selectedWidgetIds: [this.widgetId],
          prompt,
          mode: options?.spawnMode,
        },
      );
      const _screens = (
        (raw.outputComponents || []).flatMap(
          (a: any) => a?.design?.widgets || [],
        ) || []
      ).map((item) =>
        this.client.entities.resolve(Widget, ["gizmoId", "widgetId"], {
          ...item,
          gizmoId: this.gizmoId,
        }),
      );
      if (_screens.length === 0)
        throw new StitchError({
          code: "UNKNOWN_ERROR",
          message:
            "Incomplete API response from spawn_widgets: no screens in response",
          recoverable: false,
        });
      return new Generation(_screens, raw);
    } catch (error) {
      throw StitchError.fromUnknown(error);
    }
  }
}

/** Declaration-merged so the generated Widget type includes the handwritten extension methods provided at runtime. */
export interface Widget extends WidgetExtras {}
"
`;

exports[`fixture output snapshots types.generated.ts matches snapshot 1`] = `
"/**
 * AUTO-GENERATED by scripts/generate-sdk.ts
DO NOT EDIT — changes will be overwritten.

 */

/** A gizmo resource. */
export interface GizmoInput {
  name?: string;
  title?: string;
}

export interface File {
  downloadUrl?: string;
}

export interface Component {
  design?: { widgets?: { id?: string; label?: string }[] };
}

export interface ThumbnailScreenshot {
  name: string;
  downloadUrl: string;
}

/** Cached data interface for Gizmo [V1_PLAN D4]. */
export interface GizmoData {
  name?: string;
  title?: string;
  displayName?: string;
  [key: string]: any;
}

/** Cached data interface for Widget [V1_PLAN D4]. */
export interface WidgetData {
  name?: string;
  title?: string;
  displayName?: string;
  [key: string]: any;
}
"
`;

exports[`fixture output snapshots responses.generated.ts matches snapshot 1`] = `
"import { GizmoInput, File, Component } from "./types.generated.js";
/**
 * AUTO-GENERATED by scripts/generate-sdk.ts
DO NOT EDIT — changes will be overwritten.

 */

/** Response message for create_gizmo. */
export interface CreateGizmoResponse {
  name?: string;
  gizmoId?: string;
}

/** Response message for list_gizmos. */
export interface ListGizmosResponse {
  gizmos?: GizmoInput[];
}

/** Response message for get_gizmo_asset. */
export interface GetGizmoAssetResponse {
  htmlCode?: File;
  title?: string;
}

/** Response message for spawn_widgets. */
export interface SpawnWidgetsResponse {
  outputComponents?: Component[];
}
"
`;

exports[`fixture output snapshots index.ts matches snapshot 1`] = `
"/**
 * AUTO-GENERATED by scripts/generate-sdk.ts
DO NOT EDIT — changes will be overwritten.

 */
export { Root } from "./root.js";
export { Gizmo } from "./gizmo.js";
export { Widget } from "./widget.js";
export {
  toolDefinitions,
  type ToolDefinition,
  type ToolInputSchema,
  type ToolPropertySchema,
} from "./tool-definitions.js";
export type * from "./types.generated.js";
export type * from "./responses.generated.js";
"
`;
